--- a/public/index.html
+++ b/public/index.html
@@ -8,12 +8,17 @@
         <link rel="stylesheet" href="./css/style.css">
         <link rel="stylesheet" href="./css/bootstrap-rtl.min.css" />
         <link rel="stylesheet" href="./css/font-awesome.min.css" />
+        <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+        <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
         <title>React App</title>
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
         <div id="root"></div>
-
+        
+        <script>
+            AOS.init();
+          </script>
     </body>
 </html>
